cmake_minimum_required(VERSION 2.8)
project(Resection)


find_package(Eigen3 3.1.0 REQUIRED)
ADD_DEFINITIONS( ${EIGEN_DEFINITIONS} )
INCLUDE_DIRECTORIES( ${EIGEN_INCLUDE_DIRS} )
LINK_LIBRARIES( ${EIGEN_LIBRARY_DIRS} )
ADD_DEFINITIONS( ${IOSTREAM_DEFINITIONS} )
INCLUDE_DIRECTORIES( ${IOSTREAM_INCLUDE_DIRS} )
LINK_LIBRARIES( ${IOSTREAM_LIBRARY_DIRS} )

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE release)
ENDIF()

include_directories(
${EIGEN3_INCLUDE_DIR}
)
add_executable(Resection Resection.cpp)

target_link_libraries(${PROJECT_NAME}
${EIGEN3_LIBS}
${IOSTREAM_LIBS}
)
